# pix-microservices-python

./: README.md
auth-service/: .dockerignore  .env.dev.example  docker-compose.dev.yml  pyproject.toml  up.dev.sh
kafka/: README.md  docker-compose.yml
